[package]
name = "simple-tokenizer"
version = "0.2.0"
description = "A tiny no_std tokenizer with line & column tracking."
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Solar-Falcon/simple-tokenizer"
categories = ["no-std", "no-std::no-alloc", "parsing"]
readme = "README.md"
